fixed background color overlay not stretching to fill height & width. added quicksand font. changed main logo.

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,41 @@
+@font-face {
+  font-family: 'quicksand-light';
+  src: url(./fonts/Quicksand-Light.ttf);
+}
+
+@font-face {
+  font-family: 'quicksand-regular';
+  src: url(./fonts/Quicksand-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'quicksand-medium';
+  src: url(./fonts/Quicksand-Medium.ttf);
+}
+
+@font-face {
+  font-family: 'quicksand-bold';
+  src: url(./fonts/Quicksand-Bold.ttf);
+}
+
+@font-face {
+  font-family: 'quicksand-semi-bold';
+  src: url(./fonts/Quicksand-SemiBold.ttf);
+}
+
 body {
   margin: 0px;
   padding: 0px;
-  background-image: url('./static/images/circles_bg.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: bottom;
+  font-family: 'quicksand-regular';
+  background-position: center;
+  background-image: 
+    linear-gradient(
+      rgba(40, 114, 146, 0.35), 
+      rgba(40, 114, 146, 0.35)
+    ),
+    url('./static/images/circles_bg.png');
 }
 
-.bg-overlay {
-  height: 1000px;
-  width: 100%;
-  background: rgba(40, 114, 146, 0.35)
+img {
+  pointer-events: none;
 }
